--- a/3월 4주차/3월 23일.MD
+++ b/3월 4주차/3월 23일.MD
@@ -1,21 +1,180 @@
 # Review
-태그 구성
--<시작 속셩="속성값",,,,> 내용 </종료>
+image
+- src :
+- width : ""
+- height : ""
 
-Meta태그
-- meta : 문서에 대한 정보설정(name, content)
-- link : 외부파일 연결
-- base : 공유될 링크 url 설정
-- style : 스타일시트 지정
-- scrpit : 자바스크립트 지정
+a
+- href = " 사이트 | 페이지.html | #name | 페이지.html#name "
+- alt = ""
+- download : 목록 리스트와 함꼐 사용된다.
+
+table
+- table, tr, th, td
+- thead, tbody, tfoot : 레이아웃에 많이 사용된다.
 
 
 
 ## 오늘의 학습목표
 - 학습내용 :
-1) HTML 기본태그를 활용할 수 있다 : 이미지, 문서의 이동, 테이블
+1) HTML 태그
 
 ## 포트폴리오 실습(PM) 화면설계 작성, 3월 27일 (월)
 - Datebase와 연결하기 위한 CRUD기능에 대한 화면을 포함 작성할것 정하기
 
 보통 오전에는 수업, 오후에는 실습을 할 예정 ( 유동적으로 )
+
+----------------------------------------------------------------------------
+
+```
+	미디어 삽입
+		. 플러그인을 설치해서 들어야 했다.
+		. HTML5에서 audio, video태그를 표준화 해다.
+		* 비표준화 된 태그: embed, object
+
+		. 오디오 태그
+			(방법1)
+				<audio src="오디오 파일" controls autoplay loop>
+					이 태그를 지원하지 않는 브라우저 입니다.
+				</audio>
+			(방법2)
+				<audio src = " " controls autoplay loop>
+					<source src = " " type = "audio/mpeg">
+					<source src = " "
+				</audio>
+
+
+	. MIME(마임) - Multipurpos Internet Main Extension
+
+			- http프로토콜은 테그트로 데이터를 주고받는다
+			- 전송절차
+
+				(메일송신자)
+				비-아스키데이터 > [MIME변환] > ASCII데이터 >> 
+				>>>	----- ASCII데이터 ----- >>>
+				(메일수신자) - 서버
+				ASCII데이터 > [MIME역변환] >> 비-ASCII데이터
+
+			- MIME
+
+					타입		/		서브타입;매개변수		예제
+					-----------------------------------
+					text			plain			text/plain
+													text/html
+													text/css
+													text/javascript
+													(setContentType("text,html"))
+
+					image			gif, jpeg		
+					video			mpeg			video/mpeg, video/web
+													video/ogg
+													audio/wemb, audio/ogg
+													audio/webm
+					
+```
+
+### iframe
+```
+
+<!-- 
+	iframe
+		- 윈도우 또는 간단한 윈도우라고 한다.
+
+		<iframe src="URL"
+				srcdoc="HTML문서텍스트"
+				name = "프레임이름"	(target)
+				width = ""		(디폴트 300)
+				height = "" 	(디폴트 300)
+				marginwidth = "" (윈도우창의 너비여백지정)
+				marginheight = "" (윈도우창의 높이여백지정)
+
+		<iframe태그를 지원하지 않는 브라우저입니다.
+		</iframe>
+		
+		. iframe태그는 body에서만 사용해야한다.
+		. src속성이 생략되면 iframe영역은 만들어지지만 빈 상태가 존재된다
+		. 프레임에 출력할 HTML을 srcdoc로 직접 작성할 수 있지만,
+		  src가 존재한다면 srcdoc는 무시된다.
+		. 프레임안에 또 다른 프레임을 중첩시킬 수 있다.
+		. inline-block 요소의 특징을 갖는다.
+
+
+
+ -->
+
+
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+
+	<h3>인라인 프레임 구성</h3>
+	<hr>
+
+	<iframe src="F1_1프레임.html"
+			width="49%"
+			height="600"
+			frameborder="0"
+			marginwidth="150"
+			marginheight="150"> 첫번째
+
+	</iframe>
+	<iframe
+			src="F1_2프레임.html"
+			width="49%"
+			height="600"
+	> 두번
+
+	</iframe>
+
+
+</body>
+</html>
+```
+
+## target 값은 동일해도 된다.
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<h3 align="center">오늘의 메뉴</h3>
+	<hr>
+
+	<ul>
+		<li>
+			Coffee<br>
+			&nbsp;- <a href="F1_coffee.html" target="coffee">아메리카노</a><br>
+			&nbsp;- <a href="F1_coffee2.html" target="coffee">에스프레소</a><br>
+			&nbsp;- <a href="f1_coffee3.html" target="coffee">라떼</a><br>
+		</li>
+	</ul>
+	<hr>
+	<ul>
+		<li>
+			Bread<br>
+			&nbsp;- <a href="F1_bread.html" target="bread">바게뜨빵</a><br>
+			&nbsp;- <a href="F1_bread2.html" target="bread">크루아상</a><br>
+			&nbsp;- <a href="F1_bread3.html" target="bread">호밀빵</a><br>
+		</li>
+	</ul>
+	<hr>
+	<ul>
+		<li>
+			Drink<br>
+			&nbsp;- <a href="F1_Drink.html" target="drink">레몬차</a><br>
+			&nbsp;- <a href="F1_Drink2.html" target="drink">캐모마일</a><br>
+			&nbsp;- <a href="F1_Drink3.html" target="drink">녹차</a><br>
+		</li>
+	</ul>
+
+</body>
+</html>
+```
+
