--- a/3월 4주차/3월 24일.MD
+++ b/3월 4주차/3월 24일.MD
@@ -42,11 +42,185 @@ form radiobutton
 
 ## 오늘의 학습목표
 - 학습내용 :
-1) HTML 태그
+1) ***문서의 구조***를 활용 할 수 있다.
+2) 포트폴리오 실습(PM) 화면설계 작성 3월 30일까지
+- atabase와 연결하기 위한 CRUD기능에 대한 화면을 포함 작성할 것
+3) 고양이 실습 뽐내기 대회를 개최합니다. css 종료 후
+- 심사기준 : 전체 자율투표
+- 상품 : 영화티켓 2매
+
+### div
+```html
+<!DOCTYPE html>
+<!-- 
+	그룹핑 태그
+		. div, span
+		. div 블록요소(줄바꿈), span(줄바꿈) 인라인요소
+		. div로는 브라우저의 공간영역을 할당합니다.
+		. div 디자인적인 적용이 필요한 공간에 적용한다.
+		. span 디자인이 필요한 부분의 영역에 적용한다.
+
+		. 정보를 담는 태그
+			- header : 문서의 시작부분
+			- nav	 : 링크부분
+			- section: 본문의 내용 - 형식적 영역
+			- article: 본문과 연관된 
+			- aside  : 문서의 왼쪽이나 오른쪽에 본문흐름에서 약간 벗어난
+						독립적인 내용을 담는 영역
+			- footer : 문서의 마지막부분, 저자, 저작권정보 등   
+
+ -->
+
+
+### HTML select, selected | disabled
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<form>
+		<h3>수강과목</h3>
+		<select name="subject", size="1">
+			<option value="html" selected>HTML</option>
+			<option value="db">데이터베이스</option>
+			<option value="jsp">서버프로그램</option>
+			<option value="spring" disabled>프레임워크</option>
+		</select>
+		<br>
+		<input type="submit" value="전송">
+	</form>
+
+
+
+</body>
+</html>
+```
+
+### html label (덩어리처럼 사용한다.)
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<form>
+		<label>사용자 아이디:
+			<input type="text" size="10" value="">
+		</label>
+		
+		<br><br>
+		
+		<label for="pass">비밀번호: </label>
+		<input type="password" size="10" value="">
+		<input id="pass" type="password" size="10" value="">
+
+		<br><br>
+		<input type="submit" value="완료">
+	</form>
+<!-- 
+label을 사용하면 하나의 덩어리처럼 사용
+ -->	
+</body>
+</html>
+```
+
+### html 주문서 페이지 연습
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<form>
+		<fieldset style="width: 400px;">
+			<h2 align="center">상품 주문서</h2>
+
+			<fieldset>
+				<legend>개인정보</legend>
+				<p>이&nbsp;름 <input type="text" size="8"></p>
+				<p>연락처
+					<input type="text" size="3" maxlength="3"> -
+					<input type="text" size="6" maxlength="4"> -
+					<input type="text" size="6" maxlength="4">
+				</p>
+			</fieldset>
+			<fieldset>
+				<legend>배송정보</legend>
+				<p>주소&nbsp;&nbsp;&nbsp;<input type="text" size="8"></p>
+
+				<p>연락처
+					<input type="text" size="3" maxlength="3"> -
+					<input type="text" size="6" maxlength="4"> -
+					<input type="text" size="6" maxlength="4">
+				</p>
+				<p>메  &nbsp;&nbsp;모&nbsp;
+				</p>
+				<p>
+					<textarea rows="4" cols="50"></textarea>
+				</p>
+			</fieldset>
+			<fieldset>
+				<legend>주문정보</legend>
+				<p>제품명 <input type="text" size="13"></p>
+				<p>수&nbsp;&nbsp; 량
+					<input type="text" size="13">
+				</p>
+				<p>일반배송<input type="radio" name="deliver" value="일반배송" checked>
+				        특급배송<input type="radio" name="deliver" value="특급배송">
+				</p>
+			</fieldset>
+			<br>
+			<input type="submit" value="등록">&nbsp;&nbsp;
+			<input type="reset" value="취소">
+		</fieldset>
+	</form>
+</body>
+</html>
+```
+
+### html div
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<h3>그룹핑</h3>
+	<hr>
+	
+	<div style="background-color: yellowgreen;">
+		<ul>
+			<li><a>홈</a></li>
+			<li><a>회사소개</a></li>
+		</ul>
+		<br>
+		<br>
+		<address>COPYRIGHT &copy; (주)우리회사 All Rights Reserved</address>
+	</div>
+
+	<ul>
+		<li>오늘은 날씨가 참 좋습니다. 
+			<span style="background-color: aquamarine;">
+				내일은 주말입니다.
+			</span>
+		</li>
+	</ul>
 
 
 
 
 
+</body>
+</html>
+```
 
 
