--- a/3월 4주차/3월 24일.MD
+++ b/3월 4주차/3월 24일.MD
@@ -71,7 +71,6 @@ form radiobutton
 
  -->
 
-
 ### HTML select, selected | disabled
 ```html
 <!DOCTYPE html>
@@ -219,6 +218,195 @@ label을 사용하면 하나의 덩어리처럼 사용
 
 
 
+</body>
+</html>
+```
+
+### html header main 등등 이렇게 하는게 가독성이 훨 좋음
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style type="text/css">
+
+	body{margin: 0px; padding: 0px;}
+	#wrap{margin: 0px; padding: 2%; width: 96%; background: #f0f0f0;}
+	h1{text-align: center;}
+	nav{list-style: none; text-align: right;}
+	#left{float: left; margin-right: 0.5%; width: 33%; height: 500px;
+			text-align: center; background: red;}
+	#center{float: left; width: 33%; height: 500px; text-align: center;
+			background-color: orange;}
+	#right{float: right; width: 33%; height: 500px; text-align: center;
+			background-color: green;}
+	footer{clear: both; padding: 5px; text-align: center; height: 50px;}
+
+
+</style>
+</head>
+<body>
+	<div id="wrap">
+		<div id="skipnav">
+			<a href="#">콘텐츠 바로가기</a>
+		</div>
+	</div>
+
+	<header>
+		<h1>웹 프로그래밍</h1>
+		<nav>
+			<a href="#"><b>변수와 연산자</b></a>&nbsp;&nbsp;
+			<a href="#"><b>조건문과 반복문</b></a>&nbsp;&nbsp;
+			<a href="#"><i>예외처리</i></a>&nbsp;&nbsp;
+			<a href="#"><b>클래스</b></a>&nbsp;&nbsp;
+		</nav>
+	</header>
+	<hr>
+
+	<main id="contentwrap">
+		<section id="left">
+			<h2>왼쪽 컨텐츠</h2>
+			<p>내용</p>
+		</section>
+		<section id="center">
+			<h2>가운데 컨텐츠</h2>
+			<p>내용</p>
+		</section>
+		<section id="right">
+			<h2>오른쪽 컨텐츠</h2>
+			<p>내용</p>
+		</section>
+	</main>
+
+	<footer>
+		<hr>
+		<address>서울 강남구 논현동 10층 우리회사, 연락처: 02-123-4567
+			COpyright &copy: 우리회사.		All Rights Reserved
+		</address>
+	</footer>
+</body>
+</html>
+```
+
+### 밑줄 긋기
+```html
+<style tpye="text/css">
+	*{border: 1px solid lightgray;}
+</style>
+```
+
+### html 그룹핑, iframe
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style type="text/css">
+	html,body{margin: 0; padding: 5px; height: 600px;}
+	#header{width: 100%; height: 100px; background-color: skyblue;}
+	#nav{width: 20%; height: 750px; background-color: lightgray; float: left;}
+	#contatiner{width: 80%; height: 750px; background-color: lightgray; float: right;}
+	#footer{width: 100%; height: 60px; background-color: lightgray; clear: both;
+			text-align: "center";}
+	#ifrmae{margin: 10px 300px;}
+
+</style>
+</head>
+<body>
+
+	<header id="header">
+		<h1 align="center"><a href="https://www.facebook.com/elvis">Elvis Presle</a></h1>
+	</header>
+
+	<nav id="nav">
+		<ul>
+			<li><h2>Archives</h2></li>
+			<ul>
+				<li><a href="http://www.elvisthemusic.com">Elvis The Music</a></li>
+				<li><a href="http://www.graceLand.com">Elvis Home Graceland</a></li>
+				<li><a href="http://www.last.fm/music/Elvis+presley">Free Listening</a></li>
+			</ul>
+		</ul>
+	</nav>
+
+	<section id="container">
+		<article id="post-1">
+			<h2><a href="https://ko.wikipedia.org/wiki/엘비스_프레슬리">Who is Elvis?
+				</a>
+			</h2>
+
+			<div class="entry">
+				<P>엘비스 프레슬리는 20세기 가장 잘 알려진 미국 가수 중 한명이었다. 하나의 문화 아이콘으로 엘비스의 음악들은
+					세계적으로 선풍적인 인기를 끌었으며, "로큰롤의 제왕"으로 불리곤 한다. 그는 미시시피 주의 투펄로에서 태어났다.
+				</P>
+			</div>
+		</article>
+		<article id="post-2">
+			<h2><a href="https://www.biography.com/people/elvis-presley-9446466">His music and life
+				</a>
+			</h2>
+
+			<div class="entry">
+				<P>엘비스 프레슬리는 20세기 가장 잘 알려진 미국 가수 중 한명이었다. 하나의 문화 아이콘으로 엘비스의 음악들은
+					세계적으로 선풍적인 인기를 끌었으며, "로큰롤의 제왕"으로 불리곤 한다. 그는 미시시피 주의 투펄로에서 태어났다.
+				</P>
+			</div>
+		</article>
+		<navi>
+			<a href="#">&laquo; Previous Entries</a>
+		</section>
+
+		<div id="ifram">
+			<iframe id="iframe" name="iframe"
+					src=""
+					width="800" height="462"
+					frameborder="0"></iframe>
+		</div>
+	</section>
+
+	<footer id="footerfooterfooter">
+		<p>Copyright 2015 Elvis</p>
+	</footer>
+
+</body>
+</html>
+```
+
+### html details, summary ( 클릭시 제목에 대한 것들 나옴)
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<h3>상세 정보를 담는 시멘틱블록 태그</h3>
+	<hr>
+	<details>
+		<summary>Question1</summary>
+		<p>웹 개발자가 알아야 하는 언어 3가지?</p>
+	</details>
+	<details>
+		<summary>Answer 1</summary>
+		<div>
+			<h3>HTML,CSS,JAVASCRIPT</h3>
+			<img src="1.png" width="300" height="300">
+
+
+		</div>
+	</details>
+	<details>
+		<summary>내가 출판한 서적</summary>
+			<ul>
+				<li>출판사: 잘 나가는 출판사</li>
+				<li>저   자: 홍길동</li>
+				<li>가   격: 10,000원</li>
+				<li time datetime="">2023년 3월 30일</time></li>
+			</ul>
+	</details>
 </body>
 </html>
 ```
