--- a/3월 4주차/3월 24일.MD
+++ b/3월 4주차/3월 24일.MD
@@ -49,6 +49,25 @@ form radiobutton
 - 심사기준 : 전체 자율투표
 - 상품 : 영화티켓 2매
 
+## 웹사이트에서 코딩설계 준비사항
+이미지 파일 명명규칙 : 예) 식별자_이름_일련번호.png
+- bg: 배경이미지
+- btn: 버튼
+- ico: 아이콘
+- img: 이미지
+- ph: 사진
+- fig: 예제
+- txt: 텍스트
+- hdg: 표제이미지
+
+- header: 헤더
+- footer:푸터
+- gnav: 글로벌 네비게이션
+- snav: 서브네비게이션
+- breadcrumbs: 빵부스러기 네비게이션
+
+
+
 ### div
 ```html
 <!DOCTYPE html>
@@ -411,4 +430,155 @@ label을 사용하면 하나의 덩어리처럼 사용
 </html>
 ```
 
+--------------------------------------------------------------------------------------------------------
 
+# 끝나기 전 마지막 과제
+
+### 첫화면
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style type="htext/css">
+</style>
+</head>
+<body>
+	<header>
+		<h1>스마트폰</h1>
+		<p>스마트폰은 컴퓨터를 결합한 무선 휴대전화기이다. PC에서 실행되는 운영체제보다 
+			작게 만든 모바일 운영체제를 탑재하여 인터넷 검색 전자우편, 간단한 문서 편집, 카메라
+			, 오디오 및 비디오 재생 등 PC의 기능을 거의 모두 갖추고 있다.
+		</p>
+	</header>
+	<section>
+		<navi id="nav">
+			<h2>목차</h2>
+			<ul>
+				<li><a href="#a">역사</a></li>
+				<li><a href="#b">안드로이드폰</a></li>
+				<li><a href="#c">아이폰</a></li>
+				<li><a href="#d">샘플</a></li>
+			</ul>
+		</navi>
+
+		<article>
+			<h2><a id="a" href="https://ko.wikipedia.org/wiki/
+				%EC%8A%A4%EB%A7%88%ED%8A%B8%ED%8F%B0">역사</a></h2>
+			
+			<p>
+				최초의 스마트폰은 사이언(cyon)으로 추정된다. IBM사가 1992년 설계하여
+				그 해에 미국 네바다 주의 라스베이거스에서 열린 컴텍스에서 컨셉 제품으로 전시되었다.
+			</p>
+		</article>
+
+		<article>
+			<h2><a id="b" href="https://ko.wikipedia.org/wiki/
+				%EC%95%88%EB%93%9C%EB%A1%9C%EC%9D%B4%EB%93%9C_
+				%EB%B2%84%EC%A0%84_%EC%97%AD%EC%82%AC">안드로이드</a></h2>
+			<p>
+				안드로이드 버전 역사는 2007년 11월 5일 안드로이드 베타 버전부터 시작한다.
+				 안드로이드는 구글과 오픈 핸드셋 얼라이언스가 개발한 모바일 운영 체제로,
+				  최초 배포판 이후로 꾸준히 업데이트되었다. 
+			</p>
+		</article>
+
+		<article>
+			<h2><a id="c" href="https://ko.wikipedia.org/wiki/
+				%EC%95%84%EC%9D%B4%ED%8F%B0C">아이폰</a></h2>
+			<p>
+				안드로이드 버전 역사는 2007년 11월 5일 안드로이드 베타 버전부터 시작한다.
+				 안드로이드는 구글과 오픈 핸드셋 얼라이언스가 개발한 모바일 운영 체제로,
+				  최초 배포판 이후로 꾸준히 업데이트되었다. 
+			</p>
+		</article>
+
+		<article>
+			<h2><a id="d">샘플</a></h2>
+			<img id="smart" src="smart.png">
+		</article>
+
+		<article>
+			<a href="josa.html">설문조사</a>
+		</article>
+
+		
+
+	</section>
+
+
+</body>
+</html>
+```
+
+### 설문조사 클릭시
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+	#tex{width: 30%; height: 150px;}
+</style>
+</head>
+<body>
+	<header>
+		<h1>설문지</h1>
+		<p>소프트웨어 기술에 대한 의견을 듣습니다. 많은 참여 부탁드립니다.</p>
+	</header>
+	<hr>
+
+	<section>
+		<article>
+			학년 <input type="radio" name="grade" value="1학년" checked>1학년
+				<input type="radio" name="grade" value="2학년">2학년
+				<input type="radio" name="grade" value="3학년">3학년
+				<input type="radio" name="grade" value="4학년">4학년
+		</article>
+
+		<article>
+			성별 <input type="radio" name="gender" value="남자" checked>남
+				<input type="radio" name="gender" value="여자">여
+		</article>
+
+		
+
+		<article>
+			관심 분야
+			 <select name="aaa", size="1">
+				 <option value="모바일 소프트웨어" selected>모바일 소프트웨어</option>
+				 <option value="프론트엔드">프론트엔드</option>
+				 <option value="백엔드">백엔드</option>
+				 <option value="DB개발">DB개발</option>
+			</select>	
+		</article>
+
+		<article>
+
+		진로 <input type="radio" name="dream" value="개발" checked>개발
+			<input type="radio" name="dream" value="기획">기획
+			<input type="radio" name="dream" value="영업">영업
+			<input type="radio" name="dream" value="창업">창업
+		</article>
+
+		<article>
+
+			남기고 싶은 말 
+			<textarea id="tex" placeholder="글을 남겨주세요."></textarea>
+
+
+
+		</article>
+	</section>
+
+	<hr>
+
+	<footer>
+		<p>Copyright 2023 by Hoony</p>
+	</footer>
+
+</body>
+</html>
+```
