--- a/3월 4주차/3월 24일.MD
+++ b/3월 4주차/3월 24일.MD
@@ -66,6 +66,18 @@ form radiobutton
 - snav: 서브네비게이션
 - breadcrumbs: 빵부스러기 네비게이션
 
+## 코딩 설계가 하는 역할
+- 가능하면 빨리 정확하게 낭비없이 구현한다.
+- 여럿이 작업한다는 가정하에 구현한다.
+- 수정이나 변경하는 일이 생겼을때 유연하게 대응할 수 있도록 구현한다.
+
+## 코딩 설계시 검토해 둘 사항
+- 문서구조 설계 - html
+- 정보그룹의 구조화와 레이아웃 테두리 설계 -html
+- 파일에 이름붙이기 규칙 -이미지등 파일들
+- id/class 명명 규칙 정하기 -css
+- 크기,색상,코드 정하기 -css
+- 선택자 설계하기 -css
 
 
 ### div
