--- a/3월 5주차/3월 27일.MD
+++ b/3월 5주차/3월 27일.MD
@@ -77,6 +77,49 @@
 </html>
 ```
 
+### css 미디어쿼리
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+
+	@media all and (max-width: 540px) {
+		body {
+			background-color: aqua;
+		}
+	}
+	@media all and (min-width: 540px) and (max-width: 720px) {
+		body {
+			background-color: black;
+		}
+	}
+	@media all and (min-width: 720px) and (max-width: 960px) {
+		body {
+			background-color: blue;
+		}
+	}
+	@media all and (min-width: 960px) and (max-width: 1140px) {
+		body {
+			background-color: yellow;
+		}
+	}
+	@media all and (min-width: 1140px) {
+		body {
+			background-color: red;
+		}
+	}
+
+</style>
+</head>
+<body>
+	
+</body>
+</html>
+```
+
 ```css
 @charset "utf-8";
 
@@ -91,4 +134,53 @@
 	div {
 		border: 20px;
 	}
+```
+
+### css 상곡 (inherit, initial unset)
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+	/* 기본 상태 */
+	div {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+
+		width: 800px; height: 300px;
+		color: red;
+		font-size: 20px;
+		border: 5px dashed blue;
+	}
+
+	#a{
+		color: blue;
+		border: inherit;
+	}
+
+	#b{
+		color: initial;
+		border: initial;
+	}
+
+	#c{
+		color: initial;
+		color: unset;
+		border: inherit;
+		
+	}
+
+</style>
+</head>
+<body>
+	<div>
+		<p id='a'>CSS에 오신것을 환영합니다.</p>
+		<p id='b'>CSS에 오신것을 환영합니다.</p>
+		<p id='c'>CSS에 오신것을 환영합니다.</p>
+	</div>
+</body>
+</html>
 ```
