--- a/3월 5주차/3월 27일.MD
+++ b/3월 5주차/3월 27일.MD
@@ -93,8 +93,48 @@
 							: before {} - 요소의 앞에 배치하는 가상요소(태그처럼 만들어 추가)
 							: after {} - 요소의 뒤에 배치하는 가상요소()
 
+		* id와 class가 동시에 동일한 사양을 적용했다면... id로 적용된 속성이 우선 적요된다.
+		* class는 공백으로 여러개의 ㅋ르래스를 지정할 수 있다. > 호출할때는 개별적으로 호출가능하다. 
 
  -->
+```
+
+### css에서 자식 자손 형제 등 알기 좋았던 문제( ul > li+ul > li+ul > li {color: blue;}
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+	
+	#list{background-color: mistyrose;}
+
+	ul > li+ul > li+ul > li{color: blue;} /* 짬뽕 */
+	ul p{color: red;}	/* 자손 */
+	ul+li{color: green;} /* 형제 */
+
+
+
+</style>
+</head>
+<body>
+	<ul id="list">
+		<li>HTML</li>
+		<ul>
+			<li>첫번째 리스트 안에 리스트</li>
+			<ul>
+				<li>제일 안쪽 리스트</li>
+				<p>p태그입니다.</p>
+			</ul>	
+		</ul>
+		<li>두번째 리스트안에 리스트</li>
+		<p>안녕~</p>
+	</ul>
+	<li>CSS</li>
+	<li>JavaScript</li>
+</body>
+</html>
 ```
 
 
@@ -227,3 +267,107 @@
 </body>
 </html>
 ```
+
+### css 위에 했던거 연습
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+	p>em {
+		color: chartreuse;
+		font-size: 30px;
+	}
+
+	h3>p {
+		font-size: 15px;
+		color: blue;
+	}
+
+	h3>p span {
+		color: bisque;
+	}
+
+	h3> em {
+		color: blueviolet;
+	}
+
+</style>
+</head>
+<body>
+	<p>
+		특정 상황에 한정된 서택자를 <em>문맥선택자</em>라고 하고, <br>
+		<em>태그 자식태그</em>와 같은 형식으로 사용한다.
+	</p>
+	<hr>
+	<h3>
+		부모와 자식태그를 활용해서
+		<p>스트링을<span>적용</span>하는 것이 문맥선택자 입니다.</p>
+		<em>부모와 자식태그</em>를 활용해서 문맥선택자를 활용합니다.
+	</h3>
+</body>
+</html>
+```
+
+### css 위에 했던거 연습2
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+
+	*{margin: 0px;}
+	#container{width: 600px; background-color: antiquewhite; }
+
+	#container>h1 {color: blue;}
+	#container>p span{color: red;}
+	#container>p em{
+					color: blue;
+					background-color: yellow;	
+				}
+	li>h4>span { color: red;}
+
+	.bamboo {
+		background-color: orange;
+	}
+
+	.persimmon {
+		background-color: chartreuse;
+	}
+
+</style>
+</head>
+<body>
+	<div id="container">
+		<h1>건강해지는<span>차</span></h1>
+		<p>머리와 <span>피부</span>에 <span>좋은</span>차는 어떤 차일까.
+			<em>차의 종류</em>에 대해 알아보도록 합니다.</p><br><br>
+
+		<ul>
+			<li class="bamboo">
+				<h4>대나무차<span>15,000원</span></h4>
+				<p>얼굴에 물을 주는 <span>효과</span>가 있다.</p>
+			</li>
+			<li class="persimmon">
+				<h4>대나무차<span>15,000원</span></h4>
+				<p>빈혈이 있는 사람에게 효과가 있다.</p><br>
+			</li>
+			<li class="cassiaseet">
+				<h4>결명자<span>20,000원</span></h4>
+				<p>눈을 밝혀주는 효과가 있다.</p>
+				<p>보라차와 비슷하나 맛이 더 은은하고 구수하며 불그스름하다.</p>
+			</li>
+		</ul>
+
+
+	</div>
+</body>
+</html>
+```
+
+--------------------------------------------------------------------------------------------------------
+# 사진찍은 과제 집에서 해보기
