--- a/3월 5주차/3월 27일.MD
+++ b/3월 5주차/3월 27일.MD
@@ -371,3 +371,47 @@
 
 --------------------------------------------------------------------------------------------------------
 # 사진찍은 과제 집에서 해보기
+
+>는 자식 띄어쓰기는 자손! id는 #, class .  <<<<< 잘 알아두기
+
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<h3 class="h3">학습과목</h3>
+	<div class="div">
+		<ul>
+			<h4>HTML</h4>
+			<ol id="list1">
+				<li>HTML5개요</li>
+				<li class="a">문서만들기</li>
+				<li>구조화와 폼</li>
+			</ol>
+		</ul>
+		<ul>
+			<h4>CSS</h4>
+			<ol id="list2">
+				<li>웹 페이지 꾸미기</li>
+				<li>고급 <span>활용</span></li>
+			</ol>
+		</ul>
+		<ul>
+			<h4>JavaScript</h4>
+			<ol class="list3">
+				<li class="b">자바 스크립트 언어</li>
+				<li class="c">코어객체와 배열</li>
+				<li class="d">Document</li>
+			</ol>
+		</ul>
+	</div>
+	<div id="etc">
+		<p>웹 프로그래밍을 학습니다.</p>
+		<p>웹 프로그래밍을 학습니다.</p>
+	</div>
+</body>
+</html>
+```
