--- a/3월 5주차/3월 27일.MD
+++ b/3월 5주차/3월 27일.MD
@@ -415,3 +415,12 @@
 </body>
 </html>
 ```
+
+### 이거 이용해서 테두리 선 만들기
+```
+	div {
+		border: 10px double green;
+		margin-left: 30px;
+		margin-right: 30px;
+	}
+```
