--- a/3월 5주차/3월 27일.MD
+++ b/3월 5주차/3월 27일.MD
@@ -94,7 +94,7 @@
 							: after {} - 요소의 뒤에 배치하는 가상요소()
 
 		* id와 class가 동시에 동일한 사양을 적용했다면... id로 적용된 속성이 우선 적요된다.
-		* class는 공백으로 여러개의 ㅋ르래스를 지정할 수 있다. > 호출할때는 개별적으로 호출가능하다. 
+		* class는 공백으로 여러개의 클래스를 지정할 수 있다. > 호출할때는 개별적으로 호출가능하다. 
 
  -->
 ```
