--- a/3월 5주차/3월 28일.MD
+++ b/3월 5주차/3월 28일.MD
@@ -1,15 +1,26 @@
 # Review
-디자인에 활용되는 영역분할 태그
-- div
-- Span
+CSS구현 4가지 방식
+- 인라인
+- 내부참조
+- 외부참조 linke rel="stylesheet" type="text/css" href="경로" medial=all
+- 외부참조 @import url('경로')
 
-정보구조화에 활용되는 시멘틱 태그
-- header
-- nav
-- section
-- article
-- aside
+Media query활용
+- link rel="stylesheet" media="screen and (max-width:800px)" href="media.css"
+- @media 장치 and (미디어특성:값) ( 적용할 스타일 )
+- @media 장치 and (미디어특성:값) , 장치 and (미디어특성:값) (적용할 스타일)
+
+색상표기
+- rgb(255,255,255)
+- rgba(255,255,255,0.5)
+- #ff00ff
+- #ff0000ff
+
+선택자 { 속성 : 속성값; }
+- //* , id , class, 그룹(썬택자, 선택자..) 인접(+), 자식(//>) , 자손(띄어쓰기)
 
 ## 오늘의 학습목표
 - 학습내용 :
-1) ***CSS***를 활용 할 수 있다.
+1) ***BOX*** 의 개념을 이해한다.
+2) ***선택자(Selector)*** 의 종류를 숙지한다.
+3) ***텍스트관련 속성*** 을 
