--- a/3월 5주차/3월 28일.MD
+++ b/3월 5주차/3월 28일.MD
@@ -23,4 +23,8 @@ Media query활용
 - 학습내용 :
 1) ***BOX*** 의 개념을 이해한다.
 2) ***선택자(Selector)*** 의 종류를 숙지한다.
-3) ***텍스트관련 속성*** 을 
+3) ***텍스트관련 속성*** 을 이해한다
+
+
+
+
