--- a/3월 5주차/3월 28일.MD
+++ b/3월 5주차/3월 28일.MD
@@ -26,5 +26,40 @@ Media query활용
 3) ***텍스트관련 속성*** 을 이해한다
 
 
+```
+- margin
+- border
+- padding
+- contetnt를 위 3개가 감싸고 있음
+
+- Top, bottom, left, right
+
+margin: 10px - 4면
+margin: 10px 20px - 상하 10, 좌우 20
+margin: 10px 20px 30px - 상 (좌우) 하
+margin: 10px 20px 30px 40px - 상 / 우 / 하 / 좌
+
+border, border-color, border-width, border-style
+
+border: color width style
+Border-color
+Border-width
+Border-style
+
+Background : color image url() left top repeat
+Background-color
+Background-image
+Background-position
+Background-repeat
+
+font: style weight size family
+Font-style
+Font-weight
+Font-size
+Font-family
+
+Font, border, background, margin, padding
+
+```
 
 
