--- a/3월 5주차/3월 28일.MD
+++ b/3월 5주차/3월 28일.MD
@@ -25,6 +25,11 @@ Media query활용
 2) ***선택자(Selector)*** 의 종류를 숙지한다.
 3) ***텍스트관련 속성*** 을 이해한다
 
+#### 클래스는 여러개 넣어도 상관없음
+```
+<ul class="sample child aa bbb ccc">
+```
+
 
 ```
 - margin
@@ -61,5 +66,130 @@ Font-family
 Font, border, background, margin, padding
 
 ```
+
+### css 연습
+- css로 꾸미는 방법은 진짜 다양하네 [] 이용, h1의 클래가 있는들에게 컬러를 줘
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+	/* h1의 클래스가 있는것들에게 컬러를 줘라 */
+	h1[class] {color: blue;}
+	img[alt] {background-color: green; color: white;}
+	p[id] {color: red;}
+	input[type=text] {background-color: green; color: white;}
+</style>
+</head>
+<body>
+	<h1 class="#">속성 선택자</h1>
+	<p>마크업의 속성을 선택자로 사용할 수 있다. </p>
+	<hr>
+	<h3 class="Logo">서울특별시</h3>
+	<p id="title">주소록을 작성합니다.</p>
+
+	<h3>경기도</h3>
+	<p>전화번호부를 작성합니다</p>
+	<img alt="" src=""> <br><br><br>
+	이름: <input type="text" name="name" value="홍길동">
+	비번: <input type="password" name="pwd" value="1234">
+</body>
+</html>
+```
+
+### href target css ***hover***
+- hover : 마우스가 닿으면 색 변경
+- visited : 들어갔다오면 색이 원하는 색으로 변경되어 있음
+```html
+<!DOCTYPE html>
+<html>
+
+<head>
+<meta charset="UTF-8">
+<title>title</title>
+</head>
+<style>
+	a{color: #000000;}
+	a:hover{color: #f00;}
+	a#t:visited{color: orange;}
+	a.p:visited{color: orange;}
+
+</style>
+
+<body>
+	<ul>
+		<li><a id="t" href="https://www.naver.com" target="">Company</a></li>
+		<li><a href="#">Products</a></li>
+		<li><a class="p" href="https://www.daum.net" target="">Service</a></li>
+	</ul>
+</body>
+</html>
+```
+
+### 자식 last-child 등 하기
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+	ul {
+
+	}
+	li {
+
+	}
+	ul :last-child{border:15px solid red;}
+	.aa :nth-child(3){border: 3px solid green;} /* 부모가 기준 */
+	ul :first-child{border: 3px solid orange;}
+	ul :nth-child(3n+2) {border: 1px solid blue;} /* 2번을 기준으로 3칸 */
+	ul :nth-child(even) {background-color: bisque;} /* 짝수번 */
+</style>
+</head>
+<body>
+	<ul class="sample child aa bbb ccc">
+		<li>child1(first)</li>
+		<li>child2</li>
+		<li>child3</li>
+		<li>child4</li>
+		<li>child5</li>
+		<li>child6</li>
+		<li>child7(last)</li>
+
+	</ul>
+</body>
+</html>
+```
+
+### 선택자 이름이 포함되어 있는것들에 넣기
+
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+	li[class ^="member"]{color: blue;} /* member로 시작하는것들 찾기 */
+	li[class $="intro"]{color: red;}
+	li[class *="intro"]{background-color: yellow;}
+
+</style>
+</head>
+<body>
+	<ul class="sample">
+		<li class="intromember">intro</li>
+		<li class="memberintro">memberintro</li>
+		<li class="memberintono">memberintono</li>
+	</ul>
+</body>
+</html>
+```
+
+
+
 
 
