--- a/3월 5주차/3월 27일.MD
+++ b/3월 5주차/3월 27일.MD
@@ -498,5 +498,52 @@
 </html>
 ~~~
 
+### first letter, active 활용 css
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+	h3:first-letter {color: red;}
+	h3 {color: chocolate;}
+	strong {background-color: yellow;}
+	#list {background-color: palevioletred;}
+	
+	#span:active {color: green;}
+	.info {color: darkslateblue;}
 
+</style>
+</head>
+<body>
+	<h5><b>선택자를 학습한 내용을 활용해서 꾸며보세요.</b></h5>
+	<hr>
+	<header>
+		<h3>Web Programming</h3>
+	</header>
+	<section>
+		<div>
+			<div>2학기<strong>학습내용</strong>입니다.</div>
+			<article>
+				<ul id="list">
+					<label>
+						<li><a href="#"><span id="span">HTML</span></a></li>
+					</label>
+
+					<label>
+						<li><a href="#"><span>CSS</span></a></li>
+					</label>
+
+					<label>
+						<li><a href="#"><span>JAVASCRIPT</span></a></li>
+					</label>
+				</ul>
+			</article>
+			<div class="info">이번주 목요일까지 화면설계를 완료합니다.</div>
+		</div>
+	</section>
+</body>
+</html>
+```
 
