--- a/3월 5주차/3월 28일.MD
+++ b/3월 5주차/3월 28일.MD
@@ -190,6 +190,344 @@ Font, border, background, margin, padding
 ```
 
 
+## list-style-type: none; (list 스타일 없애기)
+
+### css 이것저것 요것저것 요리조리 다 넣어본것
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+
+	
+
+	/* 가상태그 */
+	h3.practice:before {
+		content: "實用例";
+		display: inline-block;
+		margin: -3px 5px 0 0;
+		padding: 2px 3px 0 3px;
+		background: #00c4AB;
+		color: #ffff;
+		border-radius: 3px;
+		font-size: 70%;
+		vertical-align: middle;
+	}
+
+	/* 공통스타일 */
+	body {
+		margin: 0px;
+		padding: 30px;
+		background-color: #f6f6f6;
+		color: #454545;
+	}
+	h1 {
+		margin: 0 0 10px 0;
+		padding: 5px 10px;
+		background: #ccc;
+		color: #666;
+		font-size: 120%;
+		text-align: 1px 1px 0 #fff;;
+		line-height: 1px;
+	}
+
+	.category{
+		margin-bottom: 30px;
+		padding: 15px;
+		border: #ccc 1px solid;
+	}
+
+	.category>section {
+		margin: 10px 0;
+		padding: 10px 30px;
+		background: #fff;
+		border: #ddd 1px solid;
+	}
+
+	section li {
+		margin: 5px 0;
+		background: #f6f6f6;
+		border: #ddd 2px solid;
+	}
+
+	.sample li,
+	.sample h4,
+	.sample h5,
+	.sample p {
+		margin: 5px 0;
+		padding: 5px;
+		border: #ccc 1px solid;
+		background: #eee;
+		list-style-type: none;
+	}
+
+	.ofType{
+		padding-left: 40px;
+	}
+	.ofType h5,
+	.ofType h5+p {
+		margin-left: 30px;
+	}
+	
+	.stripe {
+		width: 100%;
+		border-collapse: collapse;
+		border: #ccc 1px solid;
+	}
+
+	.stripe td {
+		padding: 5px;
+		text-align: center;
+		border: red 1px solid;
+	}
+
+	.target a {
+		display: block;
+		margin: 0 0 -1px 40px;
+		padding: 5px;
+		color: #666;
+		border: 1px solid #ccc;
+		background: #eee;
+		list-style-type: none;
+		text-decoration: none;
+	}
+	.target a:hover {
+		background: #f7f7f7;
+		color: #000;
+		font-weight: bold;
+	}
+	.target dd {
+		padding: 10px;
+		display: none;
+	}
+
+	.ui {
+		margin: 0 0 10px 40px;
+		padding: 15px;
+		border: 1px solid #ccc;
+	}
+
+	li[class ^="START"] {
+		border: 2px solid red;
+		background: yellow;
+	}
+
+	li[class $="END"] {
+		border: 2px solid red;
+		background: yellow;
+	}
+
+	li[class *="CNT"] {
+		border: 2px solid red;
+		background: yellow;
+	}
+
+	a[href ^= "http"] {
+		padding-right: 20px;
+		background: url('img/icon_blank.gif') right center no-repeat;
+	}
+
+	a[href $= ".pdf"] {
+		padding-left: 20px;
+		background: url('img/icon_pdf.gif') no-repeat;
+	}
+
+	.child :last-child {
+		border-color: #f00;
+		background-color: orange;
+	}
+
+	.child :nth-child(3) {
+		color: #f00;
+		font-weight: bolder;		
+	}
+
+	.child :nth-child(even) {
+		background: green;
+		color: white;
+	}
+
+	.child :nth-child(3n+2) {
+		border: #000 5px solid;
+	}
+
+	.ofType :first-child {
+		border-color: blue;
+	}
+
+	.ofType :nth-of-type(even) {
+		border-color: #00f;
+		background: yellow;
+	}
+
+	.stripe tr:nth-child(even) {
+		background: fuchsia;
+	}
+
+	.lastRed :last-of-type {
+		color: #f00;
+	}
+
+	/* 특정한것만 빼고 나머지를 한다 */
+	.nots li:not(:last-child) {
+		border-color: green;
+		border-width: 3px;
+		font-style: italic;
+	}
+
+	.target dd:target {
+		display: block;
+	}
+
+	.ui input:enabled+label:hover {
+		color: red;
+	}
+
+	.ui input:checked+label {
+		background: #ceb;
+	}
+
+</style>
+</head>
+	<script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
+<body>
+	<h1>CSS3 Selector</h1>
+	<section class="category attr">
+		<h2 id="h2">Attribute Selector[속성선택자]</h2>
+		
+		<section>
+
+			<h3>class 속성 <em>[~로 시작된다]</em>요소를 선택</h3>
+			<ul class="sample">
+				<li class="STARTxx">STARTxx</li>
+				<li class="xxSTART">xxSTART</li>
+				<li class="xxSTARTxx">xxSTARTxx</li>
+			</ul>
+		</section>
+		<section>
+			<h3>class 속성 <em>[~로 끝난다]</em>요소를 선택</h3>
+			<ul class="sample">
+				<li class="ENDxx">ENDxx</li>
+				<li class="xxEND">xxEND</li>
+				<li class="xxENDxx">xxENDxx</li>
+			</ul>
+		</section>
+		<section>
+			<h3>class 속성 <em>[~로 포함한다]</em>요소를 선택</h3>
+			<ul class="sample">
+				<li class="CNTxx">CNTxx</li>
+				<li class="xxCNT">xxCNT</li>
+				<li class="xxCNTxx">xxCNTxx</li>
+			</ul>
+		</section>
 
 
 
+		<section>
+			<h3>class 속성</h3>
+			<ul class="sample">
+				<li><a href="https://www.naver.com">속성연습1</a></li>
+				<li><a href="img/file.pdf" download="">속성연습2</a></li>
+			</ul>
+		</section>
+		<section>
+			<h3 class="practice">링크 종류별로 아이콘을 표시</h3>
+			<ul class="sample">
+				<li><a href="index.html">일반링크</a></li>
+				<li><a href="https://www.google.com">외부사이트로의 링크</a></li>
+				<li><a href="img/file01.pdf">PDF파일링크</a></li>
+			</ul>
+		</section>
+		
+		<section class="category pseudo">
+			<h2>Pseudo Class Selector[유사클래스]</h2>
+			<section>
+				<h3>모든 자식요소를 카운트 하는 <em>[~child]</em></h3>
+				<ul class="sample child">
+					<li>child1(first)</li>
+					<li>child2</li>
+					<li>child3</li>
+					<li>child4</li>
+					<li>child5</li>
+					<li>child6</li>
+					<li>child7 (last)</li>
+
+				</ul>
+			</section>
+			<section>
+				<h3>같은 요소만 카운트하는 <em>[~of-type]</em>계 유사클래스</h3>
+				<div class="sample ofType">
+					<h4>heading1(h4)</h4>
+					<p>paragraph1</p>
+					<h4>heading2(h4)</h4>
+					<p>paragraph1</p>
+					<h4>heading3(h4)</h4>
+					<p>paragraph1</p>
+
+				</div>
+			</section>
+			<section>
+				<h3 class="practice no1">줄무늬 테이블 만들기</h3>
+				<table class="stripe">
+					<tr><td>white</td><td>white</td></tr>
+					<tr><td>gray</td><td>white</td></tr>
+					<tr><td>white</td><td>white</td></tr>
+					<tr><td>gray</td><td>white</td></tr>
+				</table>
+
+				<h3 class="practice no2">마지막 1행만 빨간색 글자로 강조한다.</h3>
+				<dl class="lastRed">
+					<dt>Item1</dt>
+					<dd>XXXXXXXXXX</dd>
+					<dt>Item2</dt>
+					<dd>XXXXXXXXXX</dd>
+					<dt>Item3</dt>
+					<dd>XXXXXXXXXX</dd>
+				</dl>
+			</section>
+		</section>
+
+		<section class="category other">
+			<h2>Other Pseudo Class Selector[기타 유사클래스]</h2>
+			<section>
+				<h3>마지막 1행 이외의 모두를 선택</h3>
+				<ul class="sample nots">
+					<li>list1</li>
+					<li>list2</li>
+					<li>list3</li>
+					<li>list4</li>
+					<li>list5</li>
+				</ul>
+			</section>
+
+			<section class="category">
+				<h3>링크처를 연다</h3>
+				<dl class="sample taret">
+					<dt><a href="#panel1">MENU1</a></dt>
+					<dd id="panel1"> panel1 panel1 panel1 panel1 panel1 panel1</dd>
+					<dt><a href="#panel2">MENU1</a></dt>
+					<dd id="panel1"> panel2 panel2 panel2 panel2 panel2 panel2</dd>
+					<dt><a href="#panel3">MENU1</a></dt>
+					<dd id="panel1"> panel3 panel3 panel3 panel3 panel3 panel3</dd>
+				</dl>
+			</section>
+			<section>
+				<h3>폼의 상태에 맞춰 레이블의 스타일을 변경합니다.</h3>
+				<form class="ui">
+					<input type="radio" name="radio" id="radio1" value="1" >
+					<label for="radio1">선택지1</label>
+					<input type="radio" name="radio" id="radio2" value="2" >
+					<label for="radio2">선택지1</label>
+					<input type="radio" name="radio" id="radio3" value="3" >
+					<label for="radio3">선택지1</label>
+				</form>
+			</section>
+
+
+		</section>
+	</section>
+</body>
+</html>
+```
