--- a/3월 5주차/3월 28일.MD
+++ b/3월 5주차/3월 28일.MD
@@ -67,6 +67,29 @@ Font, border, background, margin, padding
 
 ```
 
+```
+서체(font) : font:style weight size family
+
+.Font-style	> italic, normal, oblique
+.Font-weight	> 굵기
+.Font-size	> 크기
+.Font-family	> 굴림체,TimesNewRoman,궁서체 ( 글씨체 없으면 그 다음꺼 그다음꺼 이 순서대로 )
+
+*web font	>
+```
+
+```
+
+	. text-family : Helvetica, sans-serif
+	. letter-spacing : 글자간격
+	. word-spacing : 단어간격
+	. line-height : 줄간격
+	. text-align : 텍스트의 수평정렬
+	. vertical-align : 텍슽의 수직정렬
+	. text-indent : 들여쓰기
+
+```
+
 ### css 연습
 - css로 꾸미는 방법은 진짜 다양하네 [] 이용, h1의 클래가 있는들에게 컬러를 줘
 ```html
@@ -192,7 +215,7 @@ Font, border, background, margin, padding
 
 ## list-style-type: none; (list 스타일 없애기)
 
-### css 이것저것 요것저것 요리조리 다 넣어본것
+# css 이것저것 요것저것 요리조리 다 넣어본것
 ```html
 <!DOCTYPE html>
 <html>
@@ -531,3 +554,42 @@ Font, border, background, margin, padding
 </body>
 </html>
 ```
+
+----------------------------------------------------------------------------------------------------------------
+
+### css font
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+	*{font-size: 30px;}
+	#a{font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
+	#b{font-family: Arial;}
+	#c{font-family:	serif;}
+	#d{font-family: 궁서체;}
+	#e{font-family: 굴림;}
+
+	#f{font: italic bolder 80px 궁서체,serif,"Times New Roman"}
+	div{
+		width: 500px; height: 500px;
+		background: yellowgreen url("../image/라면.jpg");
+	}
+</style>
+</head>
+<body>
+	<p id="a">폰트 속성입니다.</p>
+	<p id="b">폰트 속성입니다.</p>
+	<p id="c">폰트 속성입니다.</p>
+	<p id="d">폰트 속성입니다.</p>
+	<p id="e">폰트 속성입니다.</p>
+	<hr>
+	<p id="f">폰트 일괄지정</p>
+	<div></div>
+</body>
+</html>
+```
+
+
