--- a/3월 5주차/3월 29일.MD
+++ b/3월 5주차/3월 29일.MD
@@ -9,6 +9,11 @@
 
 -----------------------------------------------------------------------------------------------
 
+#### margin 센터잡기
+```
+margin: 10px auto; 하는게 나음
+```
+
 ### 이론자료 모아두기
 ```
 	텍스트 장식 text-decoration
@@ -17,8 +22,6 @@
 				overline - 윗줄
 				underline - 밑줄 
 				line-through - 삭선 <u> <strike>
-        
-        
       
         
 	text-transform
@@ -39,8 +42,39 @@
 			- colum-count : 3: 박스의 내용을 3단으로 나눈다
 			- column-gap : 10px: 컬럼간의 간격을 10px
 			- column-rule : 2px dotted brown : border 일괄지정과 동일
-  
+			
+	word-wrap
+		; 영문 띄어쓰기 없이 길게 입력하면 width를 주어도
+		박스 밖으로 튀어나오게 된다.
+		이때, 박스에 맞춰서 적당히 잘라 다음 줄로 내려오도록 해준다
+		
+		
+ 문자효과
+		- 그림자, 줄바꿈, 글꼴지정
 
+		1. text-shadow : 그림자
+
+			text-shadow: x축 y축 퍼짐 색상
+
+		2. word-wrap
+		3. font-face
+ 
+ 
+ 		white-space: nowrap;
+		overflow: hidden;
+		text-overflow:ellipsis;
+		p:hover{
+		overflow: visible;
+	}
+	
+	
+	background
+		.background-color	: 배경색상
+		.background-image	: 배경이미지
+		.background-repeat	: 이미지 반복여부
+		.background-attachment	:
+		.background-position : 이미지위치정
+ 
 ```
 
 
@@ -156,7 +190,100 @@
 </html>
 ```
 
+### text 더 안나오면 ... 표시
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<style>
+	p {
+		border: 1px solid #ccc;
+		width: 300px;
+
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow:ellipsis;
+	}
+
+	p:hover{
+		overflow: visible;
+	}
+
+</style>
+<body>
+	<p>귀리는 베타글루칸(항암 및 면역증강작용을 가지고 있는 불소화성 다당류) 성분을 포함하고 있다.</p>
+</body>
+</html>
+```
+
+### 폰트 외부에서 가져와서 쓰기 (이거 잘 모르겠으면 검색해서하기)
+- 외부에서 폰트가져와서 폴더에 따로 넣어줘야함
+```html
+<!DOCTYPE html>
+<!-- 
+	font-face(글꼴) 설정
+		. 기본 글골이 아닌 경우 글꼴파일이 없이는 인터넷 화면에 출력할 수 없다.
+		. 같은 글꼴을 볼 수 있도록 웹 폰트를 설정할 수 있게 되었다.
+
+		. format("폰트포맷")	포맷 확장자
+		------------------------------
+		"truetype"			.ttf
+		"opentype"			.otf, .ttf
+		"svg"				.svg, .svgz
+		"woff"				.woff
+		"woff2"				.woff2
+
+		.구현방법
+			<link rel="stylesheet" type="text/css" href="http://~~"
+			<style>
+				@font-face {
+					font-family:"이름"
+					src: url() format("")
+
+				}
+
+			</style>
+
+ -->
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<style>
+	@font-face {
+		font-family: "NBrush";
+		src: url("./NanumFont/NanumBrush.ttf")format("truetype");
+	}
+	@font-face {
+		font-family: "NPen";
+		src: url("./NanumFont/NanumPen.ttf")format("truetype");
+	}
+
+	h1{
+		text-align: center;
+		font: bold 5em "NBrush";
+	}
+
+	h2{
+		text-align: center;
+		font: bold 3em "NPen"
+	}
+
+</style>
+<body>
+	<h1>혼자 할 수 있는 일은 많지가 않다. 그래서 관계가 중요하다.</h1>
+	<h2>하루를 즐겁게 살려면 이발을 해라! 1주일을 행복하려면 차를 사라!
+		한달을 행복하려면 승마를 배워라! 평생 행복하려면 정직해라!
+	</h2>	
+</body>
+</html>
 
 
 
+
+```
 
