--- a/3월 5주차/3월 29일.MD
+++ b/3월 5주차/3월 29일.MD
@@ -72,7 +72,7 @@ margin: 10px auto; 하는게 나음
 		.background-color	: 배경색상
 		.background-image	: 배경이미지
 		.background-repeat	: 이미지 반복여부
-		.background-attachment	:
+		.background-attachment	: 이미지 스크롤 여부
 		.background-position : 이미지위치정
  
 ```
