--- a/3월 5주차/3월 29일.MD
+++ b/3월 5주차/3월 29일.MD
@@ -69,11 +69,20 @@ margin: 10px auto; 하는게 나음
 	
 	
 	background
-		.background-color	: 배경색상
-		.background-image	: 배경이미지
-		.background-repeat	: 이미지 반복여부
+		.background-color	: 이미지가 없을경우는 배경색상이 나타난다.
+		.background-image	: url() - 배경이미지
+		.background-repeat	: repeat-x, repeat-y 이미지 반복여부
 		.background-attachment	: 이미지 스크롤 여부
-		.background-position : 이미지위치정
+		.background-position : x  y - 이미지위치정
+		.background-size : contain, cover, auto 배경(부모)크기에 일정크기로 배치시킴
+				- contain : 너비와 높이의 비율을 유지한채, 이미지가 전체 들어갈 수 있도록
+				- cover : 너비와 높이의 비율을 유지한채, 해당 이미지 하나만으로 표시영역을 덮을 수 있는
+				- auto : 너비와 높이의 비율을 유지한채, 이미지크기가 자동변경
+					한개의 값만 지정하면 너비가 지정된 것으로 판단하고 높이는 auto가 된다.
+
+
+		.background-clip : border-box, padding-box, content-box 배경을 표시할 범위 지정
+
  
 ```
 
@@ -287,3 +296,181 @@ margin: 10px auto; 하는게 나음
 
 ```
 
+### 종류별 문자표시
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+	#none{list-style: none;}
+	#disk{list-style-type: disc;}
+	#circle{list-style: circle;}
+	#square{list-style-type: square;}
+
+	#ol1{list-style-type: decimal;}
+	#ol2{list-style: lower-roman;}
+	#ol3{list-style: upper-roman;}
+	#ol4{list-style: lower-alpha;}
+	#ol5{list-style: upper-alpha;}
+</style>
+</head>
+<body>
+	<h3>순서없는 목록표시</h3>
+	<ul>
+		<li id="none">목록표시 마크없음</li>
+		<li id="disk">디스크</li>
+		<li id="circle">원</li>
+		<li id="square">사각형</li>
+	</ul>
+	<ol>
+		<li id="ol1">10진수마크</li>
+		<li id="ol2">소문자 로마숫자</li>
+		<li id="ol3">대문자 로마숫자</li>
+		<li id="ol4">소문자 알파벳 마크</li>
+		<li id="ol5">대문자 알파벳 마크</li>
+	</ol>
+</body>
+</html>
+```
+
+### 그라데이션 표현
+```html
+<!DOCTYPE html>
+<!-- 
+	선형 그라데이션
+		- linear-gradient(방향, 색상, 색상... )
+
+					0도
+	  to top left to top
+
+	  to left  270도			90도 to right
+
+
+					180도                to bottom right
+				   to bottom
+
+	시작점 0 ------- 그라데이션 -------- 종료
+	red 0%		orange 10%	,,,,, blue 100%
+
+ -->
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+	div {
+		margin: 10px;
+		width: 250px;
+		height: 120px;
+		color: #ffff00;
+		font-family: Arial, Helvetica, sans-serif;
+		font-weight: bold;
+		box-shadow: 2px 2px 5px black;
+	}
+
+	#sample1{
+		background: linear-gradient(teal,navy,red,yellow);
+	}
+
+	#sample2{
+		background: linear-gradient(to bottom right, teal, yellow);
+	}
+
+	#sample3{
+		background: linear-gradient(to top right, red 50%, green 50%);
+	}
+
+	#sample4{
+		background: linear-gradient(red, green, yellow, blue, pink);
+	}
+
+</style>
+</head>
+<body>
+	<div id="sample1">smaple1</div>
+	<div id="sample2">smaple2</div>
+	<div id="sample3">smaple3</div>
+	<div id="sample4">smaple4</div>
+</body>
+</html>
+```
+
+
+### 그라데이션 원 타원
+```html
+<!DOCTYPE html>
+<!-- 
+	원형 그라데이션
+		. radial-gradient(모양 크기(반지름) at 시작)
+		. 모양 : circle, ellipse
+		. 크기 :
+				closest-side :	circle  - 원의 중심점에서 가까운 박스의 변에 내접
+								ellipse	- 타원의 중심에서 가까운 박스의 변에 내접
+				farthest-sdie :	circle	- 원 가장 먼 변에 내접
+								ellipse - 타원 가장 먼 변에 내접
+				farthest-corner : 원 또는 타원의 중심에서 가장 먼 박스의 모서리에 내접
+				closest-corner  : 가장 가까운 모서리에 내 
+
+ -->
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+
+	.container{
+		
+	}
+	#circle1{
+		width: 400px;
+		height: 200px;
+		position: absolute;
+		left: 10px;
+		top: 10px;
+		color: white;
+		text-align: center;
+
+		background: radial-gradient(circle 40px at 30px 50px, white, black);
+	}
+
+	#circle2{
+		width: 400px;
+		height: 200px;
+		position: absolute;
+		left: 450px;
+		top: 10px;
+		color: white;
+		text-align: center;
+
+		background: radial-gradient(circle closest-side at center, white, red 55%,black);
+	}
+
+	#ellipse1{
+		width: 400px;
+		height: 200px;
+		position: absolute;
+		left: 10px;
+		top: 250px;
+		color: white;
+		text-align: center;
+
+		background: radial-gradient(ellipse 150px 80px at 20% 90%, white, black);
+		/* 엘립스 좌우로 크기 150 상하로 80이고 위치는 좌우가 20 상하가 90이고 엘립스 색은 화이트 배경색은 블랙 */
+	}
+
+</style>
+</head>
+<body>
+	<div class="container">
+		<div id="circle1">위치와 크기지정 원</div>
+		<div id="circle2">가장 가까운 변에 내접한 원</div>
+	</div>
+	<div class="container">
+		<div id="ellipse1">위치와 크기지정 원</div>
+		<div id="ellipse2">가장 가까운 변에 내접한 원</div>
+	</div>
+</body>
+</html>
+```
