--- a/3월 5주차/3월 30일.MD
+++ b/3월 5주차/3월 30일.MD
@@ -1,12 +1,152 @@
 # Review
-서체 폰트 등등등 합치기 짬뽕하기
+색상지정
+- rgb(r,g,b) rgba(r,g,b,a) #rrggbb #rrggbbaa
 
-## 오늘의 학습목표
-- 학습내용 :
-1) ***텍스트와 폰트*** 의 개념을 이해한다.
-2) ***색상과 이미지***의 이해하고 적용할 수 있다.
-3) ***표와 그라데이션***을 이해하고 적용할 수 있다.
+리스트목록지정
+- list-style-position
+- list-style-image : url()
+
+배경이미지
+- background: 색상 url() x y repeat
+- background-position:
+- background-repeat:
+- background-clip : border-box  padding-box content-box
+- background: linear-gradient(방향, 색상, 색상,,,,,)
+- background: radial-gradient( 모양 반지름(너비 높이) at 중심, 색상, 색상, 색상... )
 
 -----------------------------------------------------------------------------------------------
 
-#### margin 센터잡기
+## 오늘의 학습목표
+- 학습내용 :
+1) ***box*** 에 대한 개념과 치수를 활용한 박스 배치를 할 수 있다.
+2) ***display***의 속성을 활용해서 block, inline블록의 타입 변경을 할 수 있다.
+3) ***position*** 을 활용하여 배치 시킬 수 있다.
+
+### box-sizing
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+	#container{
+		width: 1800px;
+	}
+	.a{
+		width: 500px;
+		height: 500px;
+		border: 50px solid rgb(255,180,156,0.5);
+		border-radius: 100px;
+		background-color: orange;
+		background-image: url("./image/back.jpg");
+		margin: 100px;
+		padding: 20px;
+
+		float: left;
+		/* box-sizing: content-box; */
+		/* background-clip: padding-box; */
+		background-clip: border-box;
+	}
+	.b{
+		width: 500px;
+		height: 500px;
+		border: 50px solid black;
+		border-radius: 100px;
+		background-color: greenyellow;
+		margin: 100px;
+		padding: 20px;
+
+		float: left;
+		box-sizing: border-box;
+
+		background-clip: content-box;
+	}
+	.c{
+		clear: both;
+		width: 500px;
+		height: 500px;
+		border: 50px solid black;
+		border-radius: 100px;
+		background-color: orange;
+		margin: 100px;
+		padding: 20px;
+	}
+</style>
+</head>
+<body>
+	<div id="container">
+		<div class="a">content-box</div>
+		<div class="b">border-box</div>
+	</div>
+	<div class="c">border-box</div>
+</body>
+</html>
+
+
+```
+
+### css 레이아웃 배치 요모조모
+- margin padding border 등 이해하기 좋았음
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+	*{margin: 0; padding: 0;}
+	body{
+		margin: 10px;
+		padding: 10px;
+		border: 10px solid blue;
+		background-image: url("./image/zigzag.gif");
+	}
+
+	div{
+		margin: 0px;
+		padding: 50px;
+		width: 500px;
+		height: 400px;
+		background: green;
+		opacity: 0.5;
+		border-width: 0;	
+	}
+
+	#p1{
+		width: 400px;
+		height: 60px;
+		margin: 0px;
+		background-color: #abc;
+		color: white; font-size: 300%; text-align: center;
+		margin-bottom: 20px;
+		overflow: hidden;
+	}
+
+	#p2{
+		margin: 0px;
+		padding: 0px;
+		width: 400px;
+		height: 60px;
+		margin-top: 30px;
+		background: red;
+
+		outline: 10px;
+		outline-offset: 10px;
+		outline-color: black;
+		outline-style: solid;
+	}
+
+</style>
+</head>
+<body>
+	<div>
+		<p id="p1">BOX1 오늘은 목요일입니다. 내일은 금요일 입니다.</p>
+		<p id="p2">BOX2</p>
+	</div>
+</body>
+</html>
+```
+
+
+
