--- a/3월 5주차/3월 30일.MD
+++ b/3월 5주차/3월 30일.MD
@@ -22,6 +22,32 @@
 2) ***display***의 속성을 활용해서 block, inline블록의 타입 변경을 할 수 있다.
 3) ***position*** 을 활용하여 배치 시킬 수 있다.
 
+### background-clip 이거 알아두기
+
+###이론 모아두기
+```
+	border-width : 1px 2px 3px 4px 	: 좌상 우상 우하 좌하
+	border-width : 1px 2px 3px		: 상, 좌우, 하
+	border-width : 1px				: 전체	
+	
+	박스 테두리: hidden, dotted, dashed, solid, double, groove,
+		     ridge, outset, intset
+	
+```
+
+### 하다가 css가 계속 벌어진다면 밑에꺼 넣어보기
+```html
+	* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-size: 0;
+    letter-spacing: 0;
+    word-spacing: 0;
+	}
+```
+
+
 ### box-sizing
 ```html
 <!DOCTYPE html>
