--- a/3월 5주차/3월 30일.MD
+++ b/3월 5주차/3월 30일.MD
@@ -32,6 +32,39 @@
 	
 	박스 테두리: hidden, dotted, dashed, solid, double, groove,
 		     ridge, outset, intset
+		     
+	box-shadow:
+	가로 세로 blur-radius 그림자의크기(디폴트는0) 색상|inset
+	
+	
+	레이아웃 관련 속성들 --- 잘 숙지할것!
+		. display	:	inline, block, inlin-block, table, flex
+		. position	:	static, absolute, relative, fixed
+		. float		:	left, right, clear
+		. z-index	:	계층이 중첩되어 있을때... 큰 값이 위로 올라간다.
+		. visibility:	visible, hidden
+		. overflow	:	
+		. px,&		:	
+
+	박스유형
+		. 블록박스		:	display:block	- h,div,ul,ol,li,table,form
+										시멘틱태그들,hr,hieldset,address 등
+							. 항상 새로운 라인에서 시작한다.
+							. width,height으로 크기를 조절가능
+							. margin, border, padding 조절 가능
+
+		. 인라인박스	:	display:inline	- span, em, sub, sup, a, img, input
+						. 라인속에 배치된다.
+						. width, height를 적용할 수 없다.
+						. margin,border,padding 적용 불
+
+		. 인라인블록	:	display:inline-block
+						. 새로운 라인에서 시작하지 못함(라인속에 배치
+						. 모든 박스 안에 배치 가능
+						. 옆에 다른 요소를 배치 가능
+						. width, height을 적용가능
+						. margin, padding 적용가능
+
 	
 ```
 
