--- a/3월 5주차/3월 30일.MD
+++ b/3월 5주차/3월 30일.MD
@@ -208,4 +208,92 @@
 ```
 
 
+------------------------------------------------
+
+# 버거킹 문제 해보기 슬라이드 등등
+
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+
+	* {
+    padding: 0;
+    margin: 0;
+	}
+
+	h3{
+		margin: 10px;
+	}
+
+	#div1{
+		margin: 10px;
+		background: yellowgreen;
+	}
+
+	li {
+		display: inline-block;
+		padding-right: 20px;
+			
+	}
+
+	h1 {
+		text-align: center;
+	}
+
+	#div2{
+		margin-left: 50px;
+		margin-right: 50px;
+		height: 500px;
+		background: yellowgreen;
+	}
+
+	#div2>div{
+		display: inline-block;
+	}
+
+	.div1{
+		width: 50%;
+		height: 100%;
+		margin: 0px;
+		background: blue;
+	}
+
+	.div2{
+		width: 50%;
+		height: 100%;
+		margin: 0px;
+		background: red;
+	}
+
+
+
+</style>
+</head>
+<body>
+	<h3>HTML 웹 프로그래밍</h3>
+	<hr>
+
+	<div id="div1">
+		<ul>
+			<li>HOME</li>
+			<li>HTML</li>
+			<li>CSS3</li>
+			<li>JAVASCRIPT</li>
+		</ul>
+	</div>
+
+	<h1>내용입니다.</h1>
+	<div id="div2">
+		<div class="div1">asd</div>
+		<div class="div2">sdf</div>
+	</div>
+
+
+</body>
+</html>
+```
 
