--- a/3월 5주차/3월 30일.MD
+++ b/3월 5주차/3월 30일.MD
@@ -56,7 +56,7 @@
 		. 인라인박스	:	display:inline	- span, em, sub, sup, a, img, input
 						. 라인속에 배치된다.
 						. width, height를 적용할 수 없다.
-						. margin,border,padding 적용 불
+						. margin,border,padding 적용 불가
 
 		. 인라인블록	:	display:inline-block
 						. 새로운 라인에서 시작하지 못함(라인속에 배치
