--- a/3월 5주차/3월 31일.MD
+++ b/3월 5주차/3월 31일.MD
@@ -1,1 +1,305 @@
-휴식!
+# 학원과제
+
+~~~html
+    <!DOCTYPE html>
+    <html lang="ko">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+
+        <style>
+            * {
+                padding: 0;
+                margin: 0;
+	        }
+
+            .parent {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                height: 200px;
+                background-color: gray;
+                position: relative;
+                margin-bottom: 5px;
+            }
+
+            .left {
+                background-color: aqua;
+                width: 60px;
+                height: 50px;
+                margin-top: -100px;
+                margin-left: 50px;
+            }
+
+            .center {
+                background-color: aqua;
+                width: 500px;
+                height: 40px;
+                margin-top: -120px;
+                margin-left: 150px;
+            }
+
+            .right {
+                background-color: aqua;
+                width: 200px;
+                height: 30px;
+                margin-top: -110px;
+                margin-right: 20px;
+            }
+
+            .span1 {
+                position: absolute;
+                background-color: aqua;
+                width: 800px;
+                height: 20px;
+                top: 84%;
+                left: 50%;
+                transform: translate(-50%, 50%);
+
+            }
+
+            .span2 {
+                position: absolute;
+                background: aqua;
+                width: 150px;
+                height:  20px;
+                top: 89%;
+                left: 86%;
+                
+            }
+
+            #d1 {
+                display: flex;
+            }
+
+            #d1>div {
+                background-color: lightgray;
+                height: 600px;
+                padding-top: 10px;
+            }
+
+            #div1 {
+                text-align: center;
+                margin-right: 10px;
+                width: 300px;
+            }
+
+            #div1>.div1 {
+                width: 250px;
+                height: 150px;
+                background-color: aqua;
+                margin: 10px;
+                margin-left: 20px;
+                
+            }
+
+            #div2 {
+                width: 650px;
+                margin-left: -5px;
+                text-align: center;
+            }
+
+            .div2{
+                margin-top: 50px;
+            }
+
+            .div2>.div22{
+                display: inline-block;
+                margin: 10px;
+                width: 180px;
+                height: 150px;
+                background-color: gray;
+            }
+
+            .div2>.div222{
+                display: inline-block;
+                width: 600px;
+                height: 300px;
+                background-color: gray;
+            }
+
+
+
+            #div3 {
+                width: 555px;
+                margin-left: 5px;
+                text-align: center;
+            }
+
+            #div3>.div3 {
+                
+                margin-left: 26px;
+                margin-top: 60px;
+                width: 500px;
+                height: 460px;
+                background-color: blanchedalmond;
+            }
+
+            .div3>.div33 {
+                width: 500px;
+                height: 200px;
+                background-color: lightcoral
+            }
+
+
+
+
+            .div3>.div44 {
+                margin-top: 60px;
+                width: 500px;
+                height: 200px;
+                background-color: lightcyan;
+            }
+
+            .div33 {
+                position: relative;
+            }
+            
+            .div33 > .d {
+                display: inline-block;
+            }
+
+            .div33>.dleft {
+                position: absolute;
+                width: 180px;
+                height: 200px;
+                background-color: gray;
+                left: -0%;
+            }
+
+            .div33>.dright {
+                position: absolute;
+                width: 250px;
+                height: 200px;
+                background-color: gray;
+                left: 50%;
+            }
+
+
+            .div44 {
+                position: relative;
+            }
+            
+            .div44 > .d {
+                display: inline-block;
+            }
+
+            .div44>.dleft {
+                position: absolute;
+                width: 180px;
+                height: 200px;
+                background-color: gray;
+                left: -0%;
+            }
+
+            .div44>.dright {
+                position: absolute;
+                width: 250px;
+                height: 200px;
+                background-color: gray;
+                left: 50%;
+            }
+
+
+
+
+            .dleft>.dleft1 {
+                width: 150px;
+                height: 100px;
+                background-color: aqua;
+                margin: 15px;
+            }
+
+            .dleft>.dleft2 {
+                width: 150px;
+                height: 50px;
+                background-color: aqua;
+                margin-left: 15px;
+            }
+
+            .dright>.dright1 {
+                width: 220px;
+                height: 80px;
+                background-color: aqua;
+                margin: 15px;
+            }
+
+            .dright>.dright2 {
+                width: 220px;
+                height: 80px;
+                background-color: aqua;
+                margin: 15px;
+            }    
+
+        </style>
+    </head>
+    <body>
+
+        <div class="parent">
+            <div class="child left"></div>
+            <div class="child center"></div>
+            <div class="child right"></div>
+            
+            <span class="span1"></span>
+            <span class="span2"></span>
+          </div>
+
+
+          <div id="d1">
+            <div id="div1">
+                플러팅박스1
+                <div class="div1"></div>
+                <div class="div1"></div>
+                <div class="div1"></div>
+              </div>
+
+    
+              <div id="div2">플러팅박스2
+                <div class="div2">
+                    <div class="div22"></div>
+                    <div class="div22"></div>
+                    <div class="div22"></div>
+                    <div class="div222"></div>
+                </div>
+              </div>
+
+
+              <div id="div3">플러팅박스3
+                <div class="div3">
+                    <div class="div33">
+                        <div class="d dleft ">
+                            <div class="dleft1"></div>
+                            <div class="dleft2"></div>
+                        </div>
+                        <div class="d dright">
+                            <div class="dright1"></div>
+                            <div class="dright2"></div>
+                        </div>
+
+                    </div>
+
+
+                    <div class="div44">
+                        <div class="d dleft ">
+                            <div class="dleft1"></div>
+                            <div class="dleft2"></div>
+                        </div>
+                        <div class="d dright">
+                            <div class="dright1"></div>
+                            <div class="dright2"></div>
+                        </div>
+
+                    </div>
+                    <div class="div444">
+
+                    </div>
+                </div>
+              </div>
+          </div>
+    </body>
+    </html>
+~~~
+
+<img width="1509" alt="스크린샷 2023-04-02 오후 3 40 28" src="https://user-images.githubusercontent.com/111875357/229336914-eb7f7195-2128-482d-a88a-580831b59973.png">
