--- a/3월 5주차/3월 29일.MD
+++ b/3월 5주차/3월 29일.MD
@@ -411,7 +411,7 @@ margin: 10px auto; 하는게 나음
 				farthest-sdie :	circle	- 원 가장 먼 변에 내접
 								ellipse - 타원 가장 먼 변에 내접
 				farthest-corner : 원 또는 타원의 중심에서 가장 먼 박스의 모서리에 내접
-				closest-corner  : 가장 가까운 모서리에 내 
+				closest-corner  : 가장 가까운 모서리에 내접
 
  -->
 <html>
