--- a/4월 1주차/4월 3일.MD
+++ b/4월 1주차/4월 3일.MD
@@ -24,4 +24,158 @@ clear.both를 처리하지 않으면
 
 ## 오늘의 학습목표
 - 학습내용 :
-1) ***box*** 에 대한 개념과 치수를 활용한 박스 배치를 할 수 있다.
+1) ***css***
+
+### nth-child(xn) 활용
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+	*{margin: 0; padding: 0;}
+	ul,li{
+		list-style: none;
+	}
+	li{
+		width: 225px; height: 160px;
+		background-color: lightpink;
+		text-align: center;
+	}
+
+	#wrap{
+		width: 960px;
+		margin: 100px auto;
+	}
+
+	header{
+		text-align: center;
+		background-color: palevioletred;
+		margin-bottom: 20px;
+	}
+
+	section li{
+		float: left;
+		margin-right: 20px;
+		margin-bottom: 20px;
+	}
+
+	section li:nth-child(4n){margin-right: 0px;}
+
+	footer{
+		background-color: #00f;
+		text-align: center;
+		color: white;
+		clear: both;
+	}
+
+
+</style>
+</head>
+<body>
+	<div id="wrap">
+		<header>
+			<h1>Header Area</h1>
+		</header>
+		<section>
+			<ul>
+				<li><br><br><br>225x160(1)</li>
+				<li><br><br><br>225x160(2)</li>
+				<li><br><br><br>225x160(3)</li>
+				<li><br><br><br>225x160(4)</li>
+				<li><br><br><br>225x160(5)</li>
+				<li><br><br><br>225x160(6)</li>
+				<li><br><br><br>225x160(7)</li>
+				<li><br><br><br>225x160(8)</li>
+				<li><br><br><br>225x160(9)</li>
+				<li><br><br><br>225x160(10)</li>
+			</ul>
+		</section>
+		<footer>
+			<h1>Footer Area</h1>
+		</footer>
+	</div>
+</body>
+</html>
+```
+
+### float, position:relative 이용
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+	*{margin: 0; padding: 0;}
+	ul,li{
+		list-style: none;
+	}
+	li{
+		width: 225px; height: 160px;
+		background-color: lightpink;
+		text-align: center;
+	}
+
+	#wrap{
+		width: 960px;
+		margin: 100px auto;
+	}
+
+	header{
+		text-align: center;
+		background-color: palevioletred;
+		margin-bottom: 20px;
+	}
+
+
+
+	section li{
+		float: left;
+		margin-right: 20px;
+		margin-bottom: 20px;
+	}
+
+	section li:nth-child(4n){margin-right: 0px;}
+	section li:nth-child(7) {position: relative;
+		top: -180px;
+		right: -50%;
+	}
+
+	footer{
+		background-color: #00f;
+		text-align: center;
+		color: white;
+		clear: both;
+	}
+
+
+</style>
+</head>
+<body>
+	<div id="wrap">
+		<header>
+			<h1>Header Area</h1>
+		</header>
+		<section>
+			<ul>
+				<li><br><br><br>225x160(1)</li>
+				<li><br><br><br>225x160(2)</li>
+				<li><br><br><br>225x160(3)</li>
+				<li><br><br><br>225x160(4)</li>
+				<li><br><br><br>225x160(5)</li>
+				<li><br><br><br>225x160(6)</li>
+				<li><br><br><br>225x160(7)</li>
+				<li><br><br><br>225x160(8)</li>
+				<li><br><br><br>225x160(9)</li>
+				<li><br><br><br>225x160(10)</li>
+			</ul>
+		</section>
+		<footer>
+			<h1>Footer Area</h1>
+		</footer>
+	</div>
+</body>
+</html>
+```
