--- a/4월 1주차/4월 3일.MD
+++ b/4월 1주차/4월 3일.MD
@@ -26,6 +26,21 @@ clear.both를 처리하지 않으면
 - 학습내용 :
 1) ***css***
 
+
+### flex
+```html
+	display : flex;
+		. flex-direction: row | column | row-reverse | column-reverse
+		. justify-content : 주축방향의 배치
+							center | flext-start | flext-end
+							space-between | space-around
+		. flex-wrap : nowrap | wrap
+		. align-item : 주축을 놓고 위아래 정렬
+		. order : 놓여지는 순서변경 (정수값)
+		. flex-grow : flex의 늘어나는 배율설정 1:100%, 0.2: +20%
+```
+
+
 ### nth-child(xn) 활용
 ```html
 <!DOCTYPE html>
@@ -179,3 +194,4 @@ clear.both를 처리하지 않으면
 </body>
 </html>
 ```
+
