--- a/4월 1주차/4월 3일.MD
+++ b/4월 1주차/4월 3일.MD
@@ -38,6 +38,8 @@ clear.both를 처리하지 않으면
 		. align-item : 주축을 놓고 위아래 정렬
 		. order : 놓여지는 순서변경 (정수값)
 		. flex-grow : flex의 늘어나는 배율설정 1:100%, 0.2: +20%
+
+	order : 순서바꾸
 ```
 
 
