--- a/4월 1주차/4월 3일.MD
+++ b/4월 1주차/4월 3일.MD
@@ -39,7 +39,21 @@ clear.both를 처리하지 않으면
 		. order : 놓여지는 순서변경 (정수값)
 		. flex-grow : flex의 늘어나는 배율설정 1:100%, 0.2: +20%
 
-	order : 순서바꾸
+	order : 순서바꾸기
+
+
+
+
+		display: table;					<table>
+			display: table-row;
+				display: table-cell;		<tr>
+				display: table-cell;			<td>
+				display: table-cell;
+
+		text-align: 가로정렬 left | center | right
+		vertical-align: 세로정렬  top | middle | bottom
+
+ 
 ```
 
 
@@ -197,3 +211,87 @@ clear.both를 처리하지 않으면
 </html>
 ```
 
+### table 처럼 이용하기
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+
+	#wrap{
+		width: 100%;
+		height: 100%;
+	}
+
+	#table{
+		width: 100%;
+		height: 200px;
+		margin: 30px;
+		border-collapse: separate;
+		border-spacing: 10px;
+
+		display: table;
+	}
+
+	ul{
+		width: 100%;
+		height: 400px;
+		text-align: center;
+
+		display: table-row;
+	}
+
+
+
+	.box1>li{
+		list-style: none;
+		width: 300px;
+		height: 200px;
+		background-color: antiquewhite;
+
+		display: table-cell;
+	}
+
+	.box1>.나{
+		vertical-align: bottom;
+	}
+
+	.box1>.다{
+		vertical-align: middle;
+	}
+
+	.box3>li{
+		background-image: url("./image/버거킹1.png");
+	}
+
+</style>
+</head>
+<body>
+	<div id="wrap">
+		<div id="table">
+				<ul class="box1">
+					<li class="가">가</li>
+					<li class="나">나</li>
+					<li class="다">다</li>
+					<li>라</li>
+				</ul>
+				<ul class="box1">
+					<li>가</li>
+					<li>나</li>
+					<li>다</li>
+					<li>라</li>
+				</ul>
+				<ul class="box1 box3">
+					<li>가</li>
+					<li>나</li>
+					<li>다</li>
+					<li>라</li>
+				</ul>
+
+		</div>
+	</div>
+</body>
+</html>
+```
